# geospatial

./: .pre-commit-config.yaml  .secrets.baseline  .whitesource  requirements.txt
granite-geospatial-ocean/: pyproject.toml
granite-geospatial-ocean/notebooks/: fine_tuning.ipynb
uki-flooddetection/: README.md  pyproject.toml
uki-flooddetection/granite_geo_flood/custom_modules/: granite_geospatial_uki.py
uki-flooddetection/granite_geo_flood/utils/: helper.py
uki-flooddetection/notebooks/: 1_getting_started.ipynb  2_fine_tuning.ipynb
