[build-system]
requires = [ "setuptools" ]
build-backend = 'setuptools.build_meta'

[project]
name = "granite_geo_flood"
version = "1.1"
description = "Granite Flood Segmentation Model with S1 and S2 bands"
license = { "text" = "Apache License, Version 2.0" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["fine-tuning", "geospatial foundation models", "flood segmentation"]

dependencies = [
  "terratorch==1.1.1",
  "lightning-utilities==0.15.2",
  "jupyter",
  "imagecodecs",
  "global_land_mask",
  "numpy < 2.0",
]

[project.optional-dependencies]
colab = [
  "gdown",
]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
  "detect-secrets @ git+https://github.com/ibm/detect-secrets.git@master#egg=detect-secrets"
]
notebooks = [
  "jupyter",
]

[tool.setuptools.packages]
find = {}